# databricks-ai-starter

./: .databrickscfg  .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  mise.toml  pyproject.toml
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-create.sh
.github/workflows/: validate-devcontainer.yml
notebooks/: sample.ipynb
sample/: sample.ipynb  sample.sql
